// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`listStylePosition renders 0 1`] = `
Array [
  .c0 {
  list-style-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-position: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`listStylePosition renders function 1`] = `
Array [
  .c0 {
  list-style-position: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-position: has;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-position: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-position: has;
}

<div
    className="c0"
  />,
]
`;

exports[`listStylePosition renders invalid theme path 1`] = `
Array [
  .c0 {
  list-style-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-position: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`listStylePosition renders negative number 1`] = `
Array [
  .c0 {
  list-style-position: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-position: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-position: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-position: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`listStylePosition renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    list-style-position: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-position: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    list-style-position: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    list-style-position: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-position: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    list-style-position: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    list-style-position: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-position: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-position: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    list-style-position: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    list-style-position: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-position: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    list-style-position: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    list-style-position: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`listStylePosition renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    list-style-position: July;
  }
}

@media April {
  .c0 {
    list-style-position: August;
  }
}

@media January {
  .c0 {
    list-style-position: September;
  }
}

@media April {
  .c0 {
    list-style-position: November;
  }
}

@media June {
  .c0 {
    list-style-position: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    list-style-position: July;
  }
}

@media April {
  .c0 {
    list-style-position: August;
  }
}

@media January {
  .c0 {
    list-style-position: September;
  }
}

@media April {
  .c0 {
    list-style-position: November;
  }
}

@media June {
  .c0 {
    list-style-position: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    list-style-position: January;
  }
}

@media April {
  .c0 {
    list-style-position: December;
  }
}

@media January {
  .c0 {
    list-style-position: April;
  }
}

@media April {
  .c0 {
    list-style-position: May;
  }
}

@media June {
  .c0 {
    list-style-position: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    list-style-position: January;
  }
}

@media April {
  .c0 {
    list-style-position: December;
  }
}

@media January {
  .c0 {
    list-style-position: April;
  }
}

@media April {
  .c0 {
    list-style-position: May;
  }
}

@media June {
  .c0 {
    list-style-position: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`listStylePosition renders postitive number 1`] = `
Array [
  .c0 {
  list-style-position: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-position: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-position: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-position: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`listStylePosition renders string 1`] = `
Array [
  .c0 {
  list-style-position: July;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-position: July;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-position: June;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-position: June;
}

<div
    className="c0"
  />,
]
`;

exports[`listStylePosition renders valid theme path 1`] = `
Array [
  .c0 {
  list-style-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  list-style-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
